--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Headline: A healthy meal delivered to your door, every single day</h1>
+        <section class="section-hero">
+            <div class="hero">
+                <div class="hero-text-box">
+                    <h1 class="heading-primary">
+                        Headline: A healthy meal delivered to your door, every single day
+                    </h1>
+                    <p class="hero-description">
+                        The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. We have delivered 250,000+ meals last year!
+                    </p>
+                    <a href="#" class="btn">Start eating well</a>
+                    <a href="#" class="btn">Learn more &darr;</a>
+                </div>
+
+                <div class="hero-img-box">
+                    <img 
+                        src="img/hero.png" 
+                        alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+                        class="hero-img"
+                    >
+                </div>
+            </div>
+        </section>
+        
         <script src="" async defer></script>
     </body>
 </html>
