--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Omnifood</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -16,10 +19,34 @@
                         Headline: A healthy meal delivered to your door, every single day
                     </h1>
                     <p class="hero-description">
-                        The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. We have delivered 250,000+ meals last year!
+                        The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. 
                     </p>
                     <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
                     <a href="#" class="btn btn--outline">Learn more &darr;</a>
+                    <div class="delivered-meals">
+                        <div class="delivered-imgs">
+                            <img 
+                                src="img/customers/customer-1.jpg" 
+                                alt="Customer photo"/>
+                            <img 
+                                src="img/customers/customer-2.jpg" 
+                                alt="Customer photo"/>
+                            <img 
+                                src="img/customers/customer-3.jpg" 
+                                alt="Customer photo"/>
+                            <img 
+                                src="img/customers/customer-4.jpg" 
+                                alt="Customer photo"/>
+                            <img 
+                                src="img/customers/customer-5.jpg" 
+                                alt="Customer photo"/>
+                            <img 
+                                src="img/customers/customer-6.jpg" 
+                                alt="Customer photo"/>
+                        </div>
+                        <p class="delivered-text">
+                            <span>250,000+</span> meals delivered last year!</p>
+                    </div>
                 </div>
         
                 <div class="hero-img-box">
