Utsav| Started working on the navigation bar(header)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header class="header">
+            <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+            <nav class="main-nav">Navigation</nav> 
+        </header>
+
+        <main>
         <section class="section-hero">
             <div class="hero">
                 <div class="hero-text-box">
@@ -58,6 +64,7 @@
                 </div>
             </div>
         </section>
+        </main>
         
         <script src="" async defer></script>
     </body>
