--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/general.css">
         <link rel="stylesheet" href="css/style.css">
+
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </head>
     <body>
         <header class="header">
@@ -149,8 +152,40 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-meals">
+            <div class="container">
+                <span class="subheading">Meals</span>
+                <h2 class="heading-secondary">
+                    Omnifood AI chooses from 5,000+ recipes 
+                </h2>
+            </div>
+
+            <div class="container grid grid--3-cols">
+                <div class="meal">
+                    <img 
+                        src="img/meals/meal-1.jpg"
+                        class="meal-img" 
+                        alt="Japanese Gyozas">
+                    <p class="meal-title">Japanese Gyozas</p>
+                    <ul class="meal-attributes">
+                        <li class="meal-attribute">
+                            <ion-icon name="flame-outline"></ion-icon>
+                            <span>650 Calories</li></span>
+                        <li class="meal-attribute">
+                            <ion-icon name="restaurant-outline"></ion-icon>
+                            <span>NutriScore &reg; 74</span>
+                        </li>
+                        <li class="meal-attribute">
+                            <ion-icon name="star-outline"></ion-icon>
+                            <span>4.9 rating (537)</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="meal">Meals</div>
+                <div class="meal">List of diets</div>
+            </div>
+        </section>
         </main>
-        
-        <script src="" async defer></script>
     </body>
 </html>
