Utsav | Started with list of diets

--- a/index.html
+++ b/index.html
@@ -209,14 +209,45 @@
                             </li>
                             <li class="meal-attribute">
                                 <ion-icon class="meal-icon" name="star-outline"></ion-icon>
-                                <span><strong>4.9</strong> rating (441)</span>
+                                <span><strong>4.8</strong> rating (441)</span>
                             </li>
                         </ul>
                     </div>
                 </div>
 
 
-                <div class="meal">List of diets</div>
+                <div class="diets">
+                    <h3 class="heading-tertiary">Works with any diet.</h3>
+                    <div class="list">
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Vegetarian</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Vegan</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Pescatarian</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Gluten-free</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Lactose-free</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Keto</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Paleo</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Low FODMAP</span></li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Kid-friendly</span></li>
+                    </div>
+                </div>
             </div>
         </section>
         </main>
