--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
         </section>
 
         <section class="section-meals">
-            <div class="container">
+            <div class="container center-text">
                 <span class="subheading">Meals</span>
                 <h2 class="heading-secondary">
                     Omnifood AI chooses from 5,000+ recipes 
                 </h2>
             </div>
 
-            <div class="container grid grid--3-cols">
+            <div class="container grid grid--3-cols margin-bottom-md">
                 <div class="meal">
                     <img 
                         src="img/meals/meal-1.jpg"
@@ -248,6 +248,10 @@
                             <span>Kid-friendly</span></li>
                     </div>
                 </div>
+            </div>
+
+            <div class="container all-recipes">
+                <a href="#" class="link">See all recipes &rarr;</a>
             </div>
         </section>
         </main>
