--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                 <div class="diets">
                     <h3 class="heading-tertiary">Works with any diet.</h3>
-                    <div class="list">
+                    <ul class="list">
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                             <span>Vegetarian</span></li>
@@ -246,7 +246,7 @@
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                             <span>Kid-friendly</span></li>
-                    </div>
+                    </ul>
                 </div>
             </div>
 
@@ -381,6 +381,75 @@
                         alt="Photo of beautifully arranged food"
                         >
                 </figure>
+            </div>
+        </section>
+
+        <section class="section-pricing">
+            <div class="container">
+                <span class="subheading">Pricing</span>
+                <h2 class="heading-secondary">
+                    Eating well without breaking the bank
+                </h2>
+            </div>
+
+            <div class="container grid grid--2-cols">
+                <div class="pricing-plan">
+                    <header class="plan-header">
+                        <p class="plan-name">Starter</p>
+                        <p class="plan-price">
+                            <span>$</span>399
+                        </p>
+                        <p class="plan-text">per month. That's just $13 per meal!</p>
+                    </header>
+                    <ul class="list">
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>1 meal per day</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Order times are between 11am and 9pm</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Delivery is free</span>
+                        </li>
+                    </ul>
+                    <div class="plan-sign-up">
+                      <a href="#" class="btn btn--full">Start eating well</a>
+                     </div>
+                </div>
+
+                <div class="pricing-plan">
+                    <header class="plan-header">
+                        <p class="plan-name">Complete</p>
+                        <p class="plan-price">
+                            <span>$</span>649
+                        </p>
+                        <p class="plan-text">per month. That's just $11 per meal!</p>
+                    </header>
+                    <ul class="list">
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>2 meals per day</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Order 24/7</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Delivery is free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                            <span>Get access to latest recipes</span>
+                        </li>
+                    </ul>
+                    <div class="plan-sign-up">
+                       <a href="#" class="btn btn--full">Start eating well</a>
+                    </div>
+                </div>
             </div>
         </section>
         </main>
