--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             </div>
 
             <div class="container grid grid--2-cols">
-                <div class="pricing-plan">
+                <div class="pricing-plan pricing-plan--starter">
                     <header class="plan-header">
                         <p class="plan-name">Starter</p>
                         <p class="plan-price">
@@ -408,11 +408,14 @@
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                            <span>Order times are between 11am and 9pm</span>
+                            <span>Order from 11am to 9pm</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                             <span>Delivery is free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="close-outline"></ion-icon>
                         </li>
                     </ul>
                     <div class="plan-sign-up">
@@ -420,7 +423,7 @@
                      </div>
                 </div>
 
-                <div class="pricing-plan">
+                <div class="pricing-plan pricing-plan--complete">
                     <header class="plan-header">
                         <p class="plan-name">Complete</p>
                         <p class="plan-price">
@@ -431,11 +434,11 @@
                     <ul class="list">
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                            <span>2 meals per day</span>
+                            <span><strong>2</strong> meals per day</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                            <span>Order 24/7</span>
+                            <span>Order <strong>24/7</strong></span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -450,6 +453,13 @@
                        <a href="#" class="btn btn--full">Start eating well</a>
                     </div>
                 </div>
+            </div>
+
+            <div class="container grid grid--4-cols">
+                <div class="feature">Feature 1</div>
+                <div class="feature">Feature 1</div>
+                <div class="feature">Feature 1</div>
+                <div class="feature">Feature 1</div>
             </div>
         </section>
         </main>
